Added Mandelbrot generation benchmark.

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -2,3 +2,8 @@ mat:
 	mojo matmul/matmul.mojo > matmul/mj.perf
 	python3 matmul/matmul.py > matmul/py.perf
 	python3 matmul/results.py
+
+mandel:
+	mojo mandelbrot/mandelbrot.mojo > mandelbrot/mj.perf
+	python3 mandelbrot/mandelbrot.py > mandelbrot/py.perf
+	python3 mandelbrot/results.py
